--- a/style.css
+++ b/style.css
@@ -1,14 +1,7 @@
 body {
 	margin: 0;
-	padding: 50px 0 0 0;
+	padding: 50px 0;
 	background-color: #121212;
-}
-h1, h3 {
-	font-family: 'RocknRoll One', sans-serif;
-	text-align: center;
-}
-label, input, button {
-	font-family: 'Open Sans', sans-serif;
 }
 body div#wrapper {
 	margin: 0 auto;
@@ -19,11 +12,13 @@ body div#wrapper {
 	border-radius: 5px;
 }
 div#wrapper label {
+	font-family: 'Open Sans', sans-serif;
 	color: #e1e1e1;
 	margin-bottom: 9px;
 	display: block;
 }
 div#wrapper input {
+	font-family: 'Open Sans', sans-serif;
 	border-radius: 3px;
 	letter-spacing: 1px;
 	outline: none;
@@ -43,12 +38,17 @@ div#wrapper input:focus {
 h1 {
 	margin: 0 0 5px 0;
 	color: #92cbf7;
+	font-family: 'RocknRoll One', sans-serif;
+	text-align: center;
 }
 h3 {
 	margin: 0 0 30px 0;
 	color: #f290b1;
+	font-family: 'RocknRoll One', sans-serif;
+	text-align: center;
 }
 button {
+	font-family: 'Open Sans', sans-serif;
 	display: block;
 	letter-spacing: 1px;
 	padding: 8px 12px;
