--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
 }
 h3 {
 	margin: 0 0 30px 0;
-	color: #f290b1;
+	color: #92f792;
 	font-family: 'RocknRoll One', sans-serif;
 	text-align: center;
 }
@@ -68,7 +68,7 @@ button#calc {
 	margin: 30px auto 10px;
 }
 button#reset {
-	background-color: #f290b1;
+	background-color: #92f792;
 	margin: 0 auto;
 }
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
